--- a/client/views/notebook_edit.html
+++ b/client/views/notebook_edit.html
@@ -15,28 +15,28 @@
     <li class="active">Astronomie</li>
 </ol>
 
-<h1>Modifier un carnet</h1>
+<h1>Edit a notebook</h1>
     <pre>
-        {{ carnet | json }}
+        {{ notebook | json }}
     </pre>
 
 <form class="form-horizontal" role="form">
     <div class="form-group">
         <label for="inputTitre" class="col-sm-2 control-label">Titre</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputTitre" placeholder="Titre" ng-model="carnet.titre">
+            <input type="text" class="form-control" id="inputTitre" placeholder="Title" ng-model="notebook.title">
         </div>
     </div>
     <div class="form-group">
-        <label for="inputTexte" class="col-sm-2 control-label">Texte</label>
+        <label for="inputText" class="col-sm-2 control-label">Texte</label>
         <div class="col-sm-10">
-            <textarea class="form-control" id="inputTexte" ng-model="carnet.description"></textarea>
+            <textarea class="form-control" id="inputText" ng-model="notebook.description"></textarea>
         </div>
     </div>
     
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-primary btn-lg" ng-click="updateCarnet(carnet)">Enregistrer</button>
+            <button type="submit" class="btn btn-primary btn-lg" ng-click="updateNotebook(notebook)">Save</button>
         </div>
     </div>
 </form>
