--- a/client/views/notebook_listing.html
+++ b/client/views/notebook_listing.html
@@ -32,7 +32,7 @@
             <a href="#/notebook_edit/{{notebook.idNotebook}}" class="btn btn-default btn-xs">
                 <span class="glyphicon glyphicon-edit"></span> edit
             </a>
-            <button type="button" class="btn btn-danger btn-xs">
+            <button type="button" class="btn btn-danger btn-xs" ng-click="delete(notebook.idNotebook)">
                 <span class="glyphicon glyphicon-remove"></span> delete
             </button>
         </td>
