Several no important modifications

--- a/app/views/notebook_edit.html
+++ b/app/views/notebook_edit.html
@@ -21,7 +21,7 @@
     </pre>
 
 <div  ng-show="msgNotification" class="alert" ng-class="{'alert-success': ok, 'alert-danger': !ok}">{{msgNotification}}</div>
-<notebook notebook="notebook" update="updateNotebook(notebook)"></notebook>
+<notebook notebook="notebook"></notebook>
 
 <!--<form class="form-horizontal" role="form">-->
     <!--<div class="form-group">-->
